compiler/tests/en/errors/generic_arg_count.salam
// EXPECT: E012
func factorial(n):
    ret n
end

func main:
    println factorial()
end
